Transition in NLA is not updated #46236

Closed
opened 2015-09-24 11:57:07 +02:00 by Cenek Strichel · 8 comments

System Information
W10 64b

Blender Version
2.75a

Short description of error
If you change scale, repeat or end frame of NLA clip, transition is not updated

Exact steps for others to reproduce the error

  1. open transition.blend
  2. change FIRSTACTION scale to 1.5
  3. scale it back to 1.0
  4. gap betwen FIRSTACTION and Transition is appeared gap.png

same is happen with repeat and end frame

**System Information** W10 64b **Blender Version** 2.75a **Short description of error** If you change scale, repeat or end frame of NLA clip, transition is not updated **Exact steps for others to reproduce the error** 1) open [transition.blend](https://archive.blender.org/developer/F238528/transition.blend) 2) change FIRSTACTION scale to 1.5 3) scale it back to 1.0 4) gap betwen FIRSTACTION and Transition is appeared ![gap.png](https://archive.blender.org/developer/F238529/gap.png) same is happen with repeat and end frame
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda

Added subscriber: @mont29

Added subscriber: @mont29
Joshua Leung was assigned by Bastien Montagne 2015-09-24 12:06:55 +02:00

Joshua, what’s expected behavior here? Should transition strip always adapt and fill the gap between both strips?

Joshua, what’s expected behavior here? Should transition strip always adapt and fill the gap between both strips?
Author

note that CubeAction.001 is pushed away, it is also not good behaviour in my opinion. Because it will change your timing.

note that CubeAction.001 is pushed away, it is also not good behaviour in my opinion. Because it will change your timing.
Member

@mont29 Yes, transition strips must always be flush up against both of the strips on either side of them. Furthermore, they can only exist when there is a strip on either side to perform a transition between.

@mont29 Yes, transition strips *must* always be flush up against both of the strips on either side of them. Furthermore, they can only exist when there is a strip on either side to perform a transition between.

This issue was referenced by 0a7aaa99d8

This issue was referenced by 0a7aaa99d835b37eaf4d4919088f1db7f8d1ceaf
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46236
No description provided.